--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="OpnCore Landing Page"
+      content="OpnCore App"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/opnCore.png" />
     <!--
